--- a/Dashboard/React_project/React_pr/sandbox-main/package.json
+++ b/Dashboard/React_project/React_pr/sandbox-main/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@fontsource/noto-sans": "^5.2.7",
+    "@fontsource/roboto": "^5.2.7",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "bootstrap": "^5.3.8",
     "effector": "^23.4.2",
     "effector-react": "^23.3.0",
     "react": "^19.1.1",
