--- a/Dashboard/React_project/React_pr/sandbox-main/package.json
+++ b/Dashboard/React_project/React_pr/sandbox-main/package.json
@@ -6,6 +6,7 @@
     "@fontsource/inter": "^5.2.6",
     "@fontsource/noto-sans": "^5.2.7",
     "@fontsource/roboto": "^5.2.7",
+    "@fontsource/urbanist": "^5.2.6",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -15,15 +16,18 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "apexcharts": "^5.3.5",
     "bootstrap": "^5.3.8",
     "effector": "^23.4.2",
     "effector-react": "^23.3.0",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.7.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^3.2.0",
     "typescript": "^5.9.2",
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +58,7 @@
   "packageManager": "yarn@4.9.2",
   "devDependencies": {
     "@types/react-modal": "^3.16.3",
+    "@types/recharts": "^2.0.1",
     "sass": "^1.91.0",
     "sass-loader": "^16.0.5"
   }
