--- a/Dashboard/React_project/React_pr/sandbox-main/package.json
+++ b/Dashboard/React_project/React_pr/sandbox-main/package.json
@@ -7,6 +7,7 @@
     "@fontsource/noto-sans": "^5.2.7",
     "@fontsource/roboto": "^5.2.7",
     "@fontsource/urbanist": "^5.2.7",
+    "@phosphor-icons/react": "^2.1.10",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
