--- a/Dashboard/React_project/React_pr/sandbox-main/package.json
+++ b/Dashboard/React_project/React_pr/sandbox-main/package.json
@@ -23,6 +23,7 @@
     "effector-react": "^23.3.0",
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-modal": "^3.16.3",
@@ -58,6 +59,7 @@
   },
   "packageManager": "yarn@4.9.2",
   "devDependencies": {
+    "@types/react-bootstrap": "^1.1.0",
     "@types/react-modal": "^3.16.3",
     "@types/recharts": "^2.0.1",
     "sass": "^1.91.0",
