--- a/Dashboard/React_project/React_pr/sandbox-main/package.json
+++ b/Dashboard/React_project/React_pr/sandbox-main/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.10",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.61.1",
     "react-modal": "^3.16.3",
