--- a/Dashboard/React_project/React_pr/sandbox-main/package.json
+++ b/Dashboard/React_project/React_pr/sandbox-main/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.61.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.7.1",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "recharts": "^3.2.0",
     "typescript": "^5.9.2",
